@@ -2,7 +2,7 @@
 #
 # Exercise the tcllib time package.
 #
-# $Id: time.test,v 1.4 2003/05/01 22:40:16 patthoyts Exp $
+# $Id: time.test,v 1.5 2003/05/02 22:33:59 patthoyts Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -32,7 +32,7 @@ proc createServerProcess {} {
         # return the time in TIME epoch and then close the channel.
         proc ::srv {chan args} {
             if {[catch {
-                set r [binary format I [expr {[clock seconds] + 2208988800}]]
+                set r [binary format I [expr {int([clock seconds] + 2208988800)}]]
                 puts "connect on $chan from [fconfigure $chan -peername]"
                 puts -nonewline $chan $r
                 close $chan
@@ -90,7 +90,7 @@ test time-1.3 {time::unixtime} {
     global token
     list [catch {
         set t [time::unixtime $token]
-        string is integer -strict $t
+        expr {(0 <= $t) && ($t <= 2147483647)}
     } m] $m
 } {0 1}
 
